--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.dlvn.mcustomerportal.base.CPortalApplication"
+        android:name=".base.CPortalApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -29,7 +29,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        
         <activity android:name=".LoginActivity" >
         </activity>
         <activity
@@ -38,6 +37,19 @@
         <activity
             android:name=".PrivacyPolicyActivity"
             android:label="@string/activity_title_privacy_policy" />
+        <activity
+            android:name=".NotificationActivity"
+            android:label="@string/title_activity_notification" >
+        </activity>
+        <activity
+            android:name=".WebNapasActivity"
+            android:label="@string/title_activity_web_napas"
+            android:theme="@style/AppTheme2" >
+        </activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:label="@string/title_activity_profile" >
+        </activity>
     </application>
 
 </manifest>
