--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,6 +12,16 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <!-- permission for location -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="com.daiichi.dlvn_magp2.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
+    <permission
+        android:name="com.daiichi.dlvn_magp2.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
     <application
         android:name=".base.CPortalApplication"
         android:allowBackup="true"
@@ -29,6 +39,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/keyMap_Dev" >
+        </meta-data>
+        
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
         <activity android:name=".LoginActivity" >
         </activity>
         <activity
@@ -47,12 +67,15 @@
         </activity>
         <activity
             android:name=".ProfileActivity"
+            android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme2" >
         </activity>
+        <activity android:name=".ContractDetailActivity" >
+        </activity>
+        
         <activity
-            android:name=".ContractDetailActivity"
-            android:theme="@style/AppTheme2" >
-        </activity>
+            android:name=".ListOfficeActivity"
+            android:label="@string/activity_title_list_office" />
     </application>
 
 </manifest>
