--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,6 @@
     <!-- permission for location -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="com.daiichi.dlvn_magp2.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <permission
@@ -44,7 +43,6 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/keyMap_Dev" >
         </meta-data>
-        
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -67,15 +65,22 @@
         </activity>
         <activity
             android:name=".ProfileActivity"
-            android:label="@string/title_activity_profile"
-            android:theme="@style/AppTheme2" >
+            android:label="@string/title_activity_profile" >
         </activity>
-        <activity android:name=".ContractDetailActivity" >
+        <activity android:name=".ContractDetailActivity"
+            android:label="@string/activity_title_contract_detail" >
         </activity>
-        
         <activity
             android:name=".ListOfficeActivity"
             android:label="@string/activity_title_list_office" />
+        <activity
+            android:name=".ContactActivity"
+            android:label="@string/title_activity_contact" >
+        </activity>
+        <activity
+            android:name=".Bonus_NopPhiBHActivity"
+            android:label="@string/title_activity_bonus__nop_phi_bh" >
+        </activity>
     </application>
 
 </manifest>
